Revision history for {{$dist->name}}

{{$NEXT}}

0.04      2021-11-09 10:20:14 -0700
  - Documentation fixes (gh#3 scop++)

0.03      2019-12-02 09:18:01 -0700
  - (ProhibitUnicodeDigitInRegexp) Allow \d in a regex if there is an explicit /u

0.02      2019-11-22 10:42:34 -0700
  - (ProhibitUnicodeDigitInRegexp) Do not treat transliterate tr/// as a regexp
  - (ProhibitUnicodeDigitInRegexp) Use PPIx::RegExp to parse regular expressions

0.01      2019-11-22 09:26:22 -0700
  - initial version